--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en"></html>
+<head>
+    <meta charset="UTF-8">
+    <title>Advanced-Selectors</title>
+         <link rel="stylesheet" href="./style.css">
+</head>
 <body>
 <ul>
   <li>Horse</li>
