--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <ul>
   <li>Horse</li>
   <li>Lamb</li>
-  <li>Donkey</li>
-  <li>Bear</li>
+  <li style="color:red;">Donkey</li>
+  <li style="color:red;:>Bear</li>
   <li>Flamingo</li>
 </ul>
 <ol>
