--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Advanced-Selectors</title>
-         <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <ul>
@@ -15,8 +14,8 @@
 </ul>
 <ol>
   <li>Bear</li>
-  <li>Horse</li>
+  <li style="font-size: 40px;">Horse</li>
   <li>Lamb</li>
-  <li>Donkey</li>
+  <li style="font-size: 40px;">Donkey</li>
 </ol>
 </body>
