--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <li>Horse</li>
   <li>Lamb</li>
   <li style="color:red;">Donkey</li>
-  <li style="color:red;:>Bear</li>
+  <li style="color:red;">Bear</li>
   <li>Flamingo</li>
 </ul>
 <ol>
   <li>Bear</li>
-  <li style="font-size: 40px;">Horse</li>
+  <li style="font-size:40px;">Horse</li>
   <li>Lamb</li>
-  <li style="font-size: 40px;">Donkey</li>
+  <li style="font-size:40px;">Donkey</li>
 </ol>
 </body>
