--- a/index.html
+++ b/index.html
@@ -18,4 +18,11 @@
   <li>Lamb</li>
   <li style="font-size:40px;">Donkey</li>
 </ol>
+    
+    <div class="red1">
+    </div>
+    <div class="red2">
+    </div>
+    <div class="red3">
+    </div>
 </body>
