--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
     
     <div class="red1">
     </div>
+    <div>
     <div class="red2">
     </div>
+    <div> 
     <div class="red3">
+        </div>
+        </div>
     </div>
 </body>
