--- a/index.html
+++ b/index.html
@@ -21,12 +21,21 @@
 </ol>
     
     <div class="red1">
+        <p>Dogs</p>
+        <p>Cats</p>
+        <p>Fish</p>
     </div>
     <div>
     <div class="red2">
+        <p>Dogs</p>
+        <p>Cats</p>
+        <p>Fish</p>
     </div>
     <div> 
     <div class="red3">
+        <p>Dogs</p>
+        <p>Cats</p>
+        <p>Fish</p>
         </div>
         </div>
     </div>
