--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
   <li style="font-size:40px;">Donkey</li>
 </ol>
     
-    <div class="red1">
+    <div class="red1" id="pets1">
         <p>Dogs</p>
         <p>Cats</p>
         <p>Fish</p>
     </div>
     <div>
-    <div class="red2">
+    <div class="red2" id="pets2">
         <p>Dogs</p>
         <p>Cats</p>
         <p>Fish</p>
     </div>
     <div> 
-    <div class="red3">
+    <div class="red3" id="pets3">
         <p>Dogs</p>
         <p>Cats</p>
         <p>Fish</p>
