--- a/index.html
+++ b/index.html
@@ -6,33 +6,37 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+<div class="list1">
 <ul>
   <li>Horse</li>
   <li>Lamb</li>
-  <li style="color:red;">Donkey</li>
-  <li style="color:red;">Bear</li>
+  <li>Donkey</li>
+  <li>Bear</li>
   <li>Flamingo</li>
 </ul>
+  </div>
+  <div class="list2">
 <ol>
   <li>Bear</li>
-  <li style="font-size:40px;">Horse</li>
+  <li>Horse</li>
   <li>Lamb</li>
-  <li style="font-size:40px;">Donkey</li>
+  <li>Donkey</li>
 </ol>
+  </div>
     
-    <div class="red1" id="pets1">
+    <div class="red1">
         <p>Dogs</p>
         <p>Cats</p>
         <p>Fish</p>
     </div>
     <div>
-    <div class="red2" id="pets2">
+    <div class="red2">
         <p>Dogs</p>
         <p>Cats</p>
         <p>Fish</p>
     </div>
     <div> 
-    <div class="red3" id="pets3">
+    <div class="red3">
         <p>Dogs</p>
         <p>Cats</p>
         <p>Fish</p>
